--- a/docs/Makefile
+++ b/docs/Makefile
@@ -18,3 +18,6 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+andcommit: html
+	cd $(BUILDDIR)/html; git add.; git commit -m "rebuild"; git push origin gh-pages
